--- a/octo_restorer/config.ini
+++ b/octo_restorer/config.ini
@@ -10,12 +10,13 @@ thread_number=2
 
 tag_name=
 
-driver_version=131.0.6778.70
+driver_version=133.0.6943.54
 
 metamask_password=
 
 do_metamask=1
 do_keplr=0
 do_phantom=0
+do_backpack=0
 
 repeat=0
