--- a/octo_restorer/config.ini
+++ b/octo_restorer/config.ini
@@ -1,21 +1,20 @@
 [settings]
 api_token=
 
+profiles=
 first_profile=
 profiles_number=
 
 metamask_file=metamask.txt
 
-thread_number=2
+thread_number=
 
 tag_name=
 
-driver_version=133.0.6943.54
-
 metamask_password=
 
-do_metamask=1
-do_keplr=0
-do_phantom=0
-do_backpack=0
-do_sui=0
+do_metamask=
+do_keplr=
+do_phantom=
+do_backpack=
+do_sui=
